--- a/package.json
+++ b/package.json
@@ -1,30 +1,4 @@
 {
-  "name": "tone-viz",
   "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "p5": "^1.4.1",
-    "prettier": "^2.7.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-p5": "^1.3.30",
-    "react-router-dom": "^6.3.0",
-    "tone": "^14.7.77"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "eslint": "^8.18.0",
-    "eslint-plugin-react": "^7.30.1",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.9"
-  }
+  "workspaces": ["fxhash-export", "gallery"]
 }
