--- a/package.json
+++ b/package.json
@@ -1,4 +1,51 @@
 {
+  "name": "web-genart",
+  "version": "0.0.0",
+  "homepage": "./",
   "private": true,
-  "workspaces": ["fxhash-export", "gallery"]
+  "dependencies": {
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/p5": "^1.4.2",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "p5": "^1.4.1",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
+    "tone": "^14.7.77",
+    "typescript": "^4.6.3",
+    "web-vitals": "^1.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "start:fxhash": "REACT_APP_FXHASH=true react-scripts start",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "build:fxhash": "REACT_APP_FXHASH=true GENERATE_SOURCEMAP=false react-scripts build",
+    "clean": "npx rimraf ./build && npx rimraf ./fxhash-release.zip",
+    "zip": "cd build && npx bestzip ../fxhash-release.zip * && cd ..",
+    "release": "npm run clean && npm run build:fxhash && npm run zip",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {}
 }
