--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build:fxhash": "REACT_APP_FXHASH=true GENERATE_SOURCEMAP=false react-scripts build",
     "clean": "npx rimraf ./build && npx rimraf ./fxhash-release.zip",
     "zip": "cd build && npx bestzip ../fxhash-release.zip * && cd ..",
-    "release": "npm run clean && npm run build:fxhash && npm run zip",
+    "release": "REACT_APP_FXHASH=true npm run clean && npm run build:fxhash && npm run zip",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
