--- a/package.json
+++ b/package.json
@@ -47,5 +47,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "react-error-overlay": "6.0.9"
+  }
 }
