--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
   },
   "devDependencies": {
     "react-error-overlay": "6.0.9"
+  },
+  "resolutions": {
+    "//": "See https://github.com/facebook/create-react-app/issues/11773",
+    "react-error-overlay": "6.0.9"
   }
 }
