--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "homepage": "./",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.21.0",
+    "@react-three/fiber": "^8.3.1",
+    "@react-three/postprocessing": "^2.6.1",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/p5": "^1.4.2",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "lamina": "^1.1.23",
     "p5": "^1.4.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "three": "^0.143.0",
     "tone": "^14.7.77",
     "typescript": "^4.6.3",
     "web-vitals": "^1.0.1"
@@ -50,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/three": "^0.143.0",
     "react-error-overlay": "6.0.9"
   },
   "resolutions": {
