Refraction example + dodgey music

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/p5": "^1.4.2",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "jotai": "^1.7.8",
     "lamina": "^1.1.23",
     "p5": "^1.4.1",
     "react": "^18.2.0",
