--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "rot-js": "^2.2.0",
     "three": "^0.143.0",
     "tone": "^14.7.77",
     "typescript": "^4.6.3",
