--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "p5": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-force-graph": "^1.41.14",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "rot-js": "^2.2.0",
